ventana para subir archivos.csv

--- a/Mingeso/demo/src/main/resources/templates/nuevo-proveedor.html
+++ b/Mingeso/demo/src/main/resources/templates/nuevo-proveedor.html
@@ -113,10 +113,11 @@
         <input type="text" id = "categoria"
                placeholder="Ingrese la categoria del proveedor" name="categoria" required>
         <label><strong>Retención</strong></label>
-        <input type="text" id = "fecha"
+        <input type="text" id = "retencion"
                placeholder="Ingrese retención del proveedor (Si / No)" name="retencion" required>
       </div>
-      <button type="submit">Registrar Proveedor</button>
+
+          <button type="submit">Registrar Proveedor</button>
     </div>
   </form>
 </div>
