--- a/Mingeso/demo/src/main/resources/templates/main.html
+++ b/Mingeso/demo/src/main/resources/templates/main.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MilkStgo</title>
+  <title> MilkStgo </title>
+
 
   <style>
     .box-area{
@@ -22,7 +23,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 300px;
+      width: 400px;
       height: auto;
       border-radius: 4px;
       background-color: #fff;
@@ -47,19 +48,22 @@
     }
 
     .single-box:nth-child(1) .img-area{
-      background-image: url(https://img.freepik.com/vector-premium/chat-archivo-documento-texto-comentando-o-editando-documentos-linea-ilustracion-dibujos-animados-plana_101884-838.jpg)
-    }
-    .single-box:nth-child(2) .img-area{
       background-image: url(http://static1.squarespace.com/static/55c7a3e2e4b0fa365689d8aa/55e0aceae4b0643202e59629/55e322ade4b077beb0266329/1590769127854/?format=1500w)
     }
+    .single-box:nth-child(2) .img-area{
+      background-image: url(https://img.freepik.com/vector-premium/chat-archivo-documento-texto-comentando-o-editando-documentos-linea-ilustracion-dibujos-animados-plana_101884-838.jpg)
+    }
     .single-box:nth-child(3) .img-area{
-      background-image: url(https://img.freepik.com/vector-gratis/ingresos-netos-calculando-ilustracion-concepto-abstracto-calculo-sueldos-formula-ingresos-netos-salario-neto-contabilidad-corporativa-calculo-ganancias-estimacion-ganancias_335657-1238.jpg?w=2000)
+      background-image: url(https://static.vecteezy.com/system/resources/previews/010/703/158/non_2x/office-worker-group-silhouette-icon-teamwork-office-business-people-sign-symbol-vector.jpg)
     }
     .single-box:nth-child(4) .img-area{
       background-image: url(https://previews.123rf.com/images/magurok/magurok1606/magurok160600092/60046224-lado-la-celebraci%C3%B3n-de-solicitud-de-trabajo-aprobado-aprobado-cv-con-el-sello-la-l%C3%ADnea-delgada-plana.jpg)
     }
     .single-box:nth-child(5) .img-area{
       background-image: url(https://media.istockphoto.com/vectors/agreement-contract-and-offer-color-line-icon-proposal-linear-vector-vector-id1271477227?k=20&m=1271477227&s=612x612&w=0&h=XOSF2ISnfGJZ7bb-fU7rRdDJzTKehDmOF9kcJ5gIEmA=)
+    }
+    .single-box:nth-child(6) .img-area{
+      background-image: url(https://img.freepik.com/vector-gratis/ingresos-netos-calculando-ilustracion-concepto-abstracto-calculo-sueldos-formula-ingresos-netos-salario-neto-contabilidad-corporativa-calculo-ganancias-estimacion-ganancias_335657-1238.jpg?w=2000)
     }
     .header-text{
       font-size: 24px;
@@ -80,12 +84,21 @@
 <h1 align = center style="color: white"> <b1>MilkStgo</b1></h1>
 <div class = "box-area">
   <div class = "single-box">
+    <a href = "/nuevo-proveedor">
+      <div class = "img-area">
+      </div>
+    </a>
+    <div class = "img-text">
+      <span class = "header-text"><strong>Ingresar proveedor</strong></span>
+    </div>
+  </div>
+  <div class = "single-box">
     <a href = "/fileUpload">
       <div class = "img-area">
       </div>
     </a>
     <div class = "img-text">
-      <span class = "header-text"><strong>Cargar CSV</strong></span>
+      <span class = "header-text"><strong>Cargar acopio de leche</strong></span>
     </div>
   </div>
   <div class = "single-box">
@@ -94,9 +107,39 @@
       </div>
     </a>
     <div class = "img-text">
-      <span class = "header-text"><strong>Ver Proveedores</strong></span>
+      <span class = "header-text"><strong>Ver lista de proveedores</strong></span>
     </div>
   </div>
+
+  <!--
+  <div class = "single-box">
+    <a href = "/nuevo-proveedor">
+      <div class = "img-area">
+      </div>
+    </a>
+    <div class = "img-text">
+      <span class = "header-text"><strong>Cargar grasas y solidos</strong></span>
+    </div>
+  </div>
+  <div class = "single-box">
+    <a href = "/nuevo-proveedor">
+      <div class = "img-area">
+      </div>
+    </a>
+    <div class = "img-text">
+      <span class = "header-text"><strong>Planilla de pagos</strong></span>
+    </div>
+  </div>
+  <div class = "single-box">
+    <a href = "/nuevo-proveedor">
+      <div class = "img-area">
+      </div>
+    </a>
+    <div class = "img-text">
+      <span class = "header-text"><strong>Reporte</strong></span>
+    </div>
+  </div>
+-->
 </div>
 <h6 align = center style="color: white"> MTINGSW 2023</h6>
 </body>
