--- a/Mingeso/demo/src/main/resources/templates/main.html
+++ b/Mingeso/demo/src/main/resources/templates/main.html
@@ -93,7 +93,7 @@
     </div>
   </div>
   <div class = "single-box">
-    <a href = "/fileUpload">
+    <a href = "/fileUploadAcopioLeche">
       <div class = "img-area">
       </div>
     </a>
@@ -112,7 +112,7 @@
   </div>
 
   <div class = "single-box">
-    <a href = "/nuevo-proveedor">
+    <a href = "/fileUploadGrasaSolido">
       <div class = "img-area">
       </div>
     </a>
