--- a/Mingeso/demo/src/main/resources/templates/fileInformation.html
+++ b/Mingeso/demo/src/main/resources/templates/fileInformation.html
@@ -108,7 +108,7 @@
   <nav>
   </nav>
   <a class="btn" href="/"><button>Volver al menú principal</button></a>
-  <a class="btn-2" href="/fileUpload"><button>Cargar un nuevo .CSV</button></a>
+  <a class="btn-2" href="/fileUploadAcopioLeche"><button>Cargar un nuevo .CSV</button></a>
 </header>
 <div align = "center" class = "container my-2">
   <h1><b>Información de Acopio.csv</b></h1>
