--- a/Mingeso/demo/src/main/resources/templates/main.html
+++ b/Mingeso/demo/src/main/resources/templates/main.html
@@ -89,7 +89,7 @@
       </div>
     </a>
     <div class = "img-text">
-      <span class = "header-text"><strong>Ingresar Proveedor</strong></span>
+      <span class = "header-text"><strong>Ingresar Proveedor papaya</strong></span>
     </div>
   </div>
   <div class = "single-box">
