Añadido paginas nuevas

--- a/Mingeso/demo/src/main/resources/templates/planillaPagos.html
+++ b/Mingeso/demo/src/main/resources/templates/planillaPagos.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
-    <title>Cargar acopio de leche</title>
+    <title>Planilla de pagos</title>
     <style>
         .container{
             display: flex;
@@ -89,6 +89,7 @@
         }
     </style>
 </head>
+</head>
 <body>
 <header class="header">
     <div class="logo">
@@ -97,27 +98,27 @@
     <nav>
     </nav>
     <a class="btn" href="/"><button>Volver al menú principal</button></a>
-    <a class="btn-2" href="/fileInformationGS"><button>Ver el último CSV cargado</button></a>
 </header>
-<div class = "f">
-    <div class="container">
-        <h1><b>Cargar el archivo de datos</b></h1>
-        <form th:action="@{/fileUploadGrasaSolido}" method="POST" enctype="multipart/form-data">
-            <br>
-            <input type="file" class="form-control" name="file" accept = ".csv">
-            <br>
-            <input class = "btn btn-primary"
-                   type="submit" value="Cargar el archivo a la Base de Datos">
-        </form>
-        <br>
-        <u><b> <h2 th:text="${mensaje}"></h2></b></u>
-    </div>
-</div>
-<br>
-<hr>
 
-<div class = "form1">
-    <h5><b>Recuerde que debe cargar un archivo Excel de extensión .csv!</b></h5>
+<div class = "mainclass">
+    <form  th:action="@{/planillaPagos}" method="GET">
+        <h1><b>Buscar Proveedor</b></h1>
+        <div class="formcontainer">
+            <hr/>
+            <div class="container">
+                <label><strong>Nombre</strong></label>
+                <input type="text" id = "nombre"
+                       placeholder="Ingrese el nombre del proveedor" name="nombre" required>
+            </div>
+
+            <button type="submit">Buscar</button>
+        </div>
+    </form>
 </div>
+
+<div>
+
+</div>
+
 </body>
 </html>
