--- a/Mingeso/demo/src/main/resources/templates/main.html
+++ b/Mingeso/demo/src/main/resources/templates/main.html
@@ -121,7 +121,7 @@
     </div>
   </div>
   <div class = "single-box">
-    <a href = "/nuevo-proveedor">
+    <a href = "/planillaPagos">
       <div class = "img-area">
       </div>
     </a>
@@ -130,7 +130,7 @@
     </div>
   </div>
   <div class = "single-box">
-    <a href = "/nuevo-proveedor">
+    <a href = "/reporte">
       <div class = "img-area">
       </div>
     </a>
