--- a/Mingeso/demo/src/main/resources/templates/reporte.html
+++ b/Mingeso/demo/src/main/resources/templates/reporte.html
@@ -1,10 +1,108 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOC¿TYPE html>
+<html lang = "es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Reporte</title>
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" href= "../static/css/navbar.css" type="text/css" th:href="@{/css/navbar.css}">
+    <style>
+        *{
+            font-family: sans-serif;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        .content-table{
+            border-collapse: collapse;
+            margin: 25px 0;
+            font-size: 0.9em;
+            min-width: 400px;
+            border-radius: 5px 5px 0 0;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+        }
+        .content-table thead tr{
+            background-color: #009879;
+            color: #ffffff;
+            text-align: left;
+            font-weight: bold;
+        }
+        .content-table th,
+        .content-table td{
+            padding: 12px 15px;
+        }
+        .content-table tbody tr{
+            border-bottom: 1px solid #dddddd;
+        }
+        .content-table tbody tr:nth-of-type(even){
+            background-color: #f3f3f3;
+        }
+        .content-table tbody tr:last-of-type{
+            border-bottom: 2px solid #009879;
+        }
+        .content-table tbody tr.active-row{
+            font-weight: bold;
+            color: #009879;
+        }
+        .header .btn button:hover{
+            background-color: #e2f1f8;
+            color: #ffbc0e;
+            transform: scale(1.1);
+        }
+        .header .btn-2 button {
+            margin-left: 20px;
+            font-weight: 700;
+            color: #1b3039;
+            padding: 9px 25px;
+            background: #eceff1;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease 0s;
+        }
+        .header .btn-2 button:hover{
+            background-color: #e2f1f8;
+            color: #ffbc0e;
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 <body>
+<header class="header">
+    <div class="logo">
+        <h1>MilkStgo</h1>
+    </div>
+    <nav>
+    </nav>
+    <a class="btn" href="/"><button>Volver al menú principal</button></a>
+</header>
+<div th:align = "center" class = "container my-2">
 
+    <h1><b> Reporte </b></h1>
+    <table th:border = "1" class = "content-table">
+        <thead>
+        <tr>
+            <th>Quincena</th>
+            <th>Codigo del proveedor</th>
+            <th>Nombre del proveedor</th>
+            <th>Total kls de leche</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="administracion:${administracion}">
+            <td th:text="${proveedores.quincena}"></td>
+            <td th:text="${proveedores.codigo_proveedor}"></td>
+            <td th:text="${proveedores.nombre_proveedor}"></td>
+            <td th:text="${proveedores.total_kls_leche}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
